--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "better-sqlite3": "^9.2.2",
     "next": "14.0.3",
     "prettier": "^3.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sqlite": "^5.1.1"
   },
   "devDependencies": {
     "eslint": "^8",
