--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "better-sqlite3": "^9.2.2",
-    "next": "14.0.4",
-    "prettier": "^3.1.1",
+    "better-sqlite3": "^9.4.3",
+    "next": "14.1.3",
+    "pnpm": "^8.15.4",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sqlite": "^5.1.1"
   },
   "devDependencies": {
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4"
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.3"
   }
 }
