--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "better-sqlite3": "^11.6.0",
     "next": "15.0.3",
     "prettier": "^3.4.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "sqlite": "^5.1.1"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@types/node": "^22.10.0",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "eslint": "^9.15.0",
-    "eslint-config-next": "15.0.3"
+    "eslint-config-next": "15.0.3",
+    "typescript": "^5.7.2"
   }
 }
